fix z-index of header elements

--- a/src/scss/_banner.scss
+++ b/src/scss/_banner.scss
@@ -7,7 +7,6 @@
     position: absolute;
     top: 0;
     width: 100%;
-    z-index: -1;
 
     @media only screen and (max-width: 1150px) {
         min-height: 450px;
